--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.26",
     "howler": "^2.2.4",
     "lucide-react": "^0.562.0",
     "maplibre-gl": "^5.15.0",
